--- a/front-end/Inform-User/AreYouSure.html
+++ b/front-end/Inform-User/AreYouSure.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="centered-container">
-        <h1>It's Best to be Home when Voting Online</h1>
+        <h1>Are You Sure?</h1>
         <div class="button-group">
             <a href="./GoHome.html">
                 <button id="button1">OK I'm Home Now</button>
