--- a/front-end/Inform-User/AreYouUsingGSMorWiFi.html
+++ b/front-end/Inform-User/AreYouUsingGSMorWiFi.html
@@ -11,7 +11,7 @@
     <div class="centered-container">
         <h1>Are you using GSM or WiFi?</h1>
         <div class="button-group">
-            <a href=".">
+            <a href="./ScanFace.html">
                 <button id="button1">GSM</button>
              </a>
 
