--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-    <div class="center-screen">
-        <a href="./front-end/Inform-User/AtHome.html">
-            <button class="button-3" role="button">Authenticate</button>
-        </a>
+    <div class="centered-container">
+        <h1>Voting Done Safetly</h1>
+        <div class="button-group">
+            <a href="./front-end/Inform-User/AtHome.html">
+                <button id="button1">Authenticate Me</button>
+             </a>
+        </div>
+        <p><tiny>Were not a scam website</tiny></p>
     </div>
-    <div>
-        <p style="color:chocolate">this is not a scam website</p>
-    </div>
-
-
+    
 </body>
 </html>
