--- a/front-end/Inform-User/AreYouSure_Home.html
+++ b/front-end/Inform-User/AreYouSure_Home.html
@@ -11,11 +11,11 @@
     <div class="centered-container">
         <h1>Are You Sure?</h1>
         <div class="button-group">
-            <a href="./GoHome.html">
-                <button id="button1">OK I'm Home Now</button>
+            <a href="./AreYouUsingGSMorWiFi.html">
+                <button id="button1">Yes, Ofcourse</button>
              </a>
         </div>
-        <p>Even your cats</p>
+
     </div>
 </body>
 </html>
