--- a/front-end/Inform-User/GoHome.html
+++ b/front-end/Inform-User/GoHome.html
@@ -11,11 +11,11 @@
     <div class="centered-container">
         <h1>It's Best to be Home when Voting Online</h1>
         <div class="button-group">
-            <a href="./GoHome.html">
+            <a href="./AreYouSure_Home.html">
                 <button id="button1">OK I'm Home Now</button>
              </a>
         </div>
-        <p>Even your cats</p>
+        <p>Public Wifi's and Your Coleagues<br> will make fun of your choices</p>
     </div>
 </body>
 </html>
