update front pages

--- a/front-end/Inform-User/AreYouUsingGSMorWiFi.html
+++ b/front-end/Inform-User/AreYouUsingGSMorWiFi.html
@@ -6,6 +6,8 @@
     <title>Votinator</title>
     <link rel="stylesheet" href="../../front-end/CSS/index.css">
     <link rel="icon" href="../../img/logo-black.png" type="image/png">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://trusted-cdn.com;">
+
 </head>
 <body>
     <div class="centered-container">
@@ -15,10 +17,11 @@
                 <button id="button1">GSM</button>
              </a>
 
-             <a href="./front-end/Inform-User/AtHome.html">
+             <a href="./DontUseWiFi.html">
                 <button id="button1">WiFi</button>
              </a>
         </div>
+        <p>Your Proximus - Telenet - Orange Provider Does not Care that Much about your Security</p>
     </div>
 </body>
 </html>
