--- a/front-end/Inform-User/GoHome.html
+++ b/front-end/Inform-User/GoHome.html
@@ -6,6 +6,8 @@
     <title>Votinator</title>
     <link rel="stylesheet" href="../../front-end/CSS/index.css">
     <link rel="icon" href="../../img/logo-black.png" type="image/png">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://trusted-cdn.com;">
+
 </head>
 <body>
     <div class="centered-container">
