--- a/front-end/Inform-User/AreYouSure_Home.html
+++ b/front-end/Inform-User/AreYouSure_Home.html
@@ -17,7 +17,7 @@
                 <button id="button1">Yes, Ofcourse</button>
              </a>
         </div>
-
+        <p>No really it's better to be home</p>
     </div>
 </body>
 </html>
