--- a/front-end/Inform-User/AreYouSure_WiFi.html
+++ b/front-end/Inform-User/AreYouSure_WiFi.html
@@ -11,14 +11,13 @@
 </head>
 <body>
     <div class="centered-container">
-        <h1>Some Routers do not have the safest standards <br> You could be sending your information without protection. Even if we are protecting it from the website people can read your address and everything. Best to Switch Now</h1>
+        <h1>Are You Sure?</h1>
         <div class="button-group">
-            <a href="./AreYouSure_WiFi.html">
-                <button id="button1">I'll switch to GSM</button>
+            <a href="./ScanID.html">
+                <button id="button1">Yes, Ofcourse</button>
              </a>
-
         </div>
-
+        <p>You Don't want your neighbors to know your full name</p>
     </div>
 </body>
 </html>
