--- a/front-end/Inform-User/AreYouUsingGSMorWiFi.html
+++ b/front-end/Inform-User/AreYouUsingGSMorWiFi.html
@@ -13,7 +13,7 @@
     <div class="centered-container">
         <h1>Are you using GSM or WiFi?</h1>
         <div class="button-group">
-            <a href="./ScanFace.html">
+            <a href="./ScanID.html">
                 <button id="button1">GSM</button>
              </a>
 
