--- a/front-end/Private/Vote/Listing.html
+++ b/front-end/Private/Vote/Listing.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../../front-end/CSS/listing.css">
     <link rel="icon" href="../../../img/logo-black.png" type="image/png">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://trusted-cdn.com;">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
 </head>
 
