Created Local server to check database of registered voters

--- a/front-end/Inform-User/AreYouUsingGSMorWiFi.html
+++ b/front-end/Inform-User/AreYouUsingGSMorWiFi.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="centered-container">
-        <h1>Are you using GSM or WiFi?</h1>
+        <h1>Are you using a mobile network (3G/4G/5G) or WiFi?</h1>
         <div class="button-group">
             <a href="./ScanID.html">
-                <button id="button1">GSM</button>
+                <button id="button1">3G/4G/5G</button>
              </a>
 
              <a href="./DontUseWiFi.html">
