--- a/front-end/Inform-User/DontUseWiFi.html
+++ b/front-end/Inform-User/DontUseWiFi.html
@@ -14,11 +14,16 @@
         <h1>Some Routers do not have the safest standards <br> You could be sending your information without protection. Even if we are protecting it from the website people can read your address and everything. Best to Switch Now</h1>
         <div class="button-group">
             <a href="./AreYouSure_WiFi.html">
-                <button id="button1">I'll switch to GSM</button>
-             </a>
+                <button id="button1">I'll switch to a mobile network</button>
+            </a>
 
         </div>
+        <div class="button-group">
+            <a href="./AreYouSure_WiFi.html">
+                <button id="button2">My wifi is completely secure (not advised)</button>
+            </a>
 
+        </div>
     </div>
 </body>
 </html>
