--- a/front-end/Inform-User/ScanID.html
+++ b/front-end/Inform-User/ScanID.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <h1>Authenticate with itsme®</h1>
-    <button id="itsmeLogin">Login with itsme®</button>
+    <a href="./Authenticate.html">
+        <button id="itsmeLogin">Login with itsme®</button>
+    </a>
 
     <script>
         document.getElementById('itsmeLogin').addEventListener('click', () => {
