admin rights to delete users

--- a/front-end/Inform-User/AreYouUsingGSMorWiFi.html
+++ b/front-end/Inform-User/AreYouUsingGSMorWiFi.html
@@ -21,7 +21,7 @@
                 <button id="button1">WiFi</button>
              </a>
         </div>
-        <p>Your Proximus - Telenet - Orange Provider Does not Care that Much about your Security</p>
+        <p>Your WiFi Provider Does not Care that Much about your Security</p>
     </div>
 </body>
 </html>
